make strcspn() behave the same way in both Unicode and native mode (bug #42731)